tests/snapshots/issue_tests__issue_11_render_case_insensitive.snap
---
source: tests/issue_tests.rs
expression: result.output
---
┌───┐
│ X │
└───┘
  │
  │
  │
  ▼
┌───┐
│ Y │
└───┘
