tests/snapshots/issue_tests__issue_11_render_d2.snap
---
source: tests/issue_tests.rs
expression: result.output
---
┌───┐
│ A │
└───┘
  │
  │
  │
  ▼
┌───┐
│ B │
└───┘
