tests/snapshots/issue_tests__issue_11_render_mermaid.snap
---
source: tests/issue_tests.rs
expression: result.output
---
┌─────┐        ┌───┐
│Start│───────▶│End│
└─────┘        └───┘
