tests/snapshots/issue_tests__issue_11_render_mermaid_pie.snap
---
source: tests/issue_tests.rs
expression: result.output
---
  A  │██████████████████            │ 60 (60.0%)
  B  │▓▓▓▓▓▓▓▓▓▓▓▓                  │ 40 (40.0%)

     Total: 100
