tests/snapshots/issue_tests__issue_18_cycle_warning_still_fires.snap
---
source: tests/issue_tests.rs
expression: result.output
---
    ┌─────┐
    │Users│
    └─────┘
       │
       │requests
       │┐
       │▼
┌──────────────┐
│Production API│
└──────────────┘
       ┌┘
Labels:
  [1] 503 errors
