tests/snapshots/issue_tests__issue_18_inline_labels.snap
---
source: tests/issue_tests.rs
expression: result.output
---
┌───────────────┐        ┌─────┐
│Analytics Query│        │Users│
└───────────────┘        └─────┘
        │                   │
        │                   │
        │60 conns heldests──│
        │       ▼           │
        ┌──────────────┐    │
        │Production API│    │
        └──────────────┘    │
               │└503 errors─┐
               ││need conn
               │┘
               ▼
┌─────────────────────────────┐
│PgBouncer { shape: cylinder }│
└─────────────────────────────┘
