tests/snapshots/issue_tests__issue_18_no_trailing_blank_lines.snap
---
source: tests/issue_tests.rs
expression: result.output
---
┌───┐        ┌───┐
│ A │───────▶│ B │
└───┘        └───┘
