tests/snapshots/issue_tests__issue_7_cycle_warning_in_result.snap
---
source: tests/issue_tests.rs
expression: result.output
---
┌───┐        ┌───┐        ┌───┐
│ A │────────│ B │────────│ C │
└───┘        └───┘        └───┘
