tests/snapshots/issue_tests__issue_7_d2_cycle_warning.snap
---
source: tests/issue_tests.rs
expression: result.output
---
┌───┐
│ A │
└───┘
  │
  │
  │
  │
┌───┐
│ B │
└───┘
  │
  │
  │
  │
┌───┐
│ C │
└───┘
