tests/snapshots/issue_tests__issue_7_no_warning_without_cycle.snap
---
source: tests/issue_tests.rs
expression: result.output
---
┌───┐        ┌───┐        ┌───┐
│ A │───────▶│ B │───────▶│ C │
└───┘        └───┘        └───┘
