tests/snapshots/issue_tests__issue_7_pie_no_warnings.snap
---
source: tests/issue_tests.rs
expression: result.output
---
  A  │███████████████               │ 50 (50.0%)
  B  │███████████████               │ 50 (50.0%)

     Total: 100
