tests/snapshots/issue_tests__issue_8_cylinder_5_rows.snap
---
source: tests/issue_tests.rs
expression: result.output
---
╭────────╮
├────────┤
│Database│
├────────┤
╰────────╯
